--- a/GOLExtractor/GOLExtractor.vcxproj
+++ b/GOLExtractor/GOLExtractor.vcxproj
@@ -162,6 +162,10 @@
     <ClCompile Include="Source\CoatsOfArms\Emblem.cpp" />
     <ClCompile Include="Source\CoatsOfArms\EmblemInstance.cpp" />
     <ClCompile Include="Source\Configuration.cpp" />
+    <ClCompile Include="Source\FlagFoundry\FlagCrafter.cpp" />
+    <ClCompile Include="Source\FlagFoundry\FlagFoundry.cpp" />
+    <ClCompile Include="Source\FlagFoundry\Recolorer.cpp" />
+    <ClCompile Include="Source\FlagFoundry\Warehouse.cpp" />
     <ClCompile Include="Source\GOLExtractor.cpp" />
     <ClCompile Include="Source\main.cpp" />
     <ClCompile Include="Source\NamedColors\NamedColors.cpp" />
@@ -182,6 +186,10 @@
     <ClInclude Include="Source\CoatsOfArms\Emblem.h" />
     <ClInclude Include="Source\CoatsOfArms\EmblemInstance.h" />
     <ClInclude Include="Source\Configuration.h" />
+    <ClInclude Include="Source\FlagFoundry\FlagCrafter.h" />
+    <ClInclude Include="Source\FlagFoundry\FlagFoundry.h" />
+    <ClInclude Include="Source\FlagFoundry\Recolorer.h" />
+    <ClInclude Include="Source\FlagFoundry\Warehouse.h" />
     <ClInclude Include="Source\GOLExtractor.h" />
     <ClInclude Include="Source\NamedColors\NamedColors.h" />
   </ItemGroup>
